# Homework10.1

./: README.md  main.py  pyproject.toml
src/: processing.py
